--- a/deployment.azure.yaml
+++ b/deployment.azure.yaml
@@ -14,7 +14,7 @@ spec:
     spec: 
       containers: 
       - name: angular 
-        image: houssemdocker/angular-app:#{Build.BuildId}#
+        image: vtest1container.azurecr.io/sabbavarapu/angular-app-kubernetes:#{Build.BuildId}#
         ports: 
         - containerPort: 80 
 --- 
